app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-react-app
  template:
    metadata:
      labels:
        app: example-react-app
    spec:
      containers:
      - name: example-react-app
        image: localhost:5000/example-react-app:latest
        resources:
          limits:
            memory: "250Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
