app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-react-app
spec:
  type: NodePort
  selector:
    app: example-react-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
