app/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-react-app
spec:
  rules:
    - host: hello-react.kube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-react-app
                port:
                  number: 80
